--- a/coffee_shop/CMakeLists.txt
+++ b/coffee_shop/CMakeLists.txt
@@ -4,8 +4,6 @@ project(coffee-shop VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Enable testing
-
 # Fetch third-party header-only libs: nlohmann/json and cpp-httplib
 include(FetchContent)
 
@@ -25,17 +23,17 @@ FetchContent_MakeAvailable(httplib)
 
 # Source lists to avoid duplication
 set(SRC_COMMON
-    src/ClientObserver.cpp
-    src/CoffeeShop.cpp
     src/DrinkFactory.cpp
     src/Drinks.cpp
-    src/Logger.cpp
-    src/NotificationDispatcher.cpp
-    src/Observer.hpp
-    src/Order.cpp
-    src/OrderManager.cpp
     src/PaymentStrategy.cpp
     src/PaymentFactory.cpp
+    src/Order.cpp
+    src/OrderManager.cpp
+    src/CoffeeShop.cpp
+    src/Observer.cpp
+    src/Logger.cpp
+    src/NotificationDispatcher.cpp
+    src/ClientObserver.cpp
 )
 
 # Main demo executable (CLI)
@@ -55,8 +53,8 @@ target_include_directories(coffee-server PRIVATE src ${httplib_SOURCE_DIR} ${nlo
 
 # Client application (CLI) to talk to the HTTP server
 add_executable(client-app
-    src/ClientObserver.cpp
     src/ClientApp.cpp
+    ${SRC_COMMON}
 )
 target_include_directories(client-app PRIVATE src ${httplib_SOURCE_DIR} ${nlohmann_json_SOURCE_DIR}/include)
 
